add image in done
