# src/controllers/product.controller.js
@@ -16,7 +16,8 @@ import {
 } from "../services/review.service";
 import { addBulkThumbnailsByItemId } from "../services/thumbnail.service";
 import { BadRequest } from "../utils/error";
-
+import fs from "fs";
+import path from "path";
 export const addProductByCustomer = async (req, res, next) => {
   try {
     const item = await addItemByUser(req.body);
@@ -95,5 +96,40 @@ export const getReviewsByProductId = async (req, res, next) => {
     });
   } catch (error) {
     next(BadRequest("Failed to fetch product reviews", error));
+  }
+};
+
+export const addMultiImage = async (req, res, next) => {
+  try {
+    const files = req?.files.map((e) => {
+      return {
+        imageLink: `http:localhost:3000/${e.filename}`,
+        imageName: e.filename,
+      };
+    });
+
+    res.status(201).json({
+      data: files,
+      message: "Image added successfully",
+    });
+  } catch (error) {
+    next(BadRequest("Failed to add image", error));
+  }
+};
+
+export const addSingleImage = async (req, res, next) => {
+  try {
+    if (req?.file) {
+      const obj = {
+        imageLink: `http:localhost:3000/${req?.file?.filename}`,
+        imageName: req?.file?.filename,
+      };
+      res.status(201).json({
+        data: obj,
+        message: "Image added successfully",
+      });
+    }
+  } catch (error) {
+    next(BadRequest("Failed to add image", error));
   }
 };
