# src/routes/product.route.js
@@ -6,7 +6,10 @@ import {
   getReviewsByProductId,
   addReviewForProduct,
   updateProductByCustomer,
+  addMultiImage,
+  addSingleImage,
 } from "../controllers/product.controller";
+import { upload } from "../utils/uploadFiles";
 
 const productRouter = Router();
 
@@ -16,5 +19,7 @@ productRouter.get("/all", getProducts);
 productRouter.get("/:id", getProductDetails);
 productRouter.post("/add/review", addReviewForProduct);
 productRouter.get("/review/:productId", getReviewsByProductId);
+productRouter.post("/add/multi/image", upload.array("files"), addMultiImage);
+productRouter.post("/add/single/image", upload.single("file"), addSingleImage);
 
 export default productRouter;
